Fix background on mobile menu

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   /* Colors */
-  --superlighteal: #eafffb;
+  --superlightpeach: #ffece3;
   --pink: #ffd5d8;
   --brown: #58311f;
   --yellow: #d4ca6f;
