--- a/src/pages/SpecificCityAdLandingPage.css
+++ b/src/pages/SpecificCityAdLandingPage.css
@@ -18,7 +18,7 @@
 }
 
 :local(.ColoredBackground) {
-  background-color: var(--superlightteal);
+  background-color: var(--superlightpeach);
   padding-bottom: 4rem;
 }
 :local(.Section) {
